[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ec9a8d8521ca9b7b800dd36726bba7da7a169b9d", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ec9a8d8521ca9b7b800dd36726bba7da7a169b9d", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false, optional = true }
#node-primitives = { path = "../../node/primitives", default-features = false, optional = true }
hex-literal = {version = "0.3.1", optional = true}
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true,branch = "polkadot-v0.9.16" }


[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "serde/std",
    "scale-info/std",
    "sp-core/std",
    "frame-system/std",
    "sp-runtime/std",
    "frame-support/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-balances/std",
    "hex-literal",
    "sp-io/std"
]

runtime-benchmarks = [
    "frame-benchmarking",
#    "node-primitives",
    "hex-literal",
    "sp-io",
]